dataset1235/2025-2/610742602/users/2070606917/executions/677928262_3455942218.log
== SUBMISSION (2025-08-26 21:58:36)
-- CODE: 
valor_unitario = float(input())
# Leitura do valor disponivel para compra 
valor_disponivel = float(input())
# Cálculo do valor total (8 jogos + frete de 45.0)
total = (valor_unitario * 8) + 45.0


# Calculo do saldo restante
saldo = valor_disponivel - total

# Impressao arrendondadda com 1 casa decimal
print(round(total, 1))
print(round(saldo, 1 ))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:56:27)
-- CODE: 
valor_unitario = float(input())
# Leitura do valor disponivel para compra 
valor_disponivel = float(input())
# Cálculo do valor total (8 jogos + frete de 45.0)
total = valor_unitario * 8) + 45.0


# Calculo do saldo restante
saldo = valor_disponivel - total

# Impressao arrendondadda com 1 casa decimal
print(round(total, 1))
print(round(saldo, 1 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:58:15)
-- CODE: 
valor_unitario = float(input())
# Leitura do valor disponivel para compra 
valor_disponivel = float(input())
# Cálculo do valor total (8 jogos + frete de 45.0)
total = valor_unitario * 8) + 45.0


# Calculo do saldo restante
saldo = valor_disponivel - total

# Impressao arrendondadda com 1 casa decimal
print(round(total, 1))
print(round(saldo, 1 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:57:02)
-- CODE: 
valor_unitario = float(input())
# Leitura do valor disponivel para compra 
valor_disponivel = float(input())
# Cálculo do valor total (8 jogos + frete de 45.0)
total = valor_unitario * 8) + 45.0


# Calculo do saldo restante
saldo = valor_disponivel - total

# Impressao arrendondadda com 1 casa decimal
print(round(total, 1))
print(round(saldo, 1 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:56:06)
-- CODE: 
valor_unitario = float(input())
# Leitura do valor disponivel para compra 
valor_disponivel = float(input())
# Cálculo do valor total (8 jogos + frete de 45.0)
total = valor_unitario * 8) + 45.0


# Calculo do saldo restante
saldo = valor_disponivel - total

# Impressao arrendondadda com 1 casa decimal
print(round(total, 1))
print(roundsaldo, 1 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:58:01)
-- CODE: 
valor_unitario = float(input())
# Leitura do valor disponivel para compra 
valor_disponivel = float(input())
# Cálculo do valor total (8 jogos + frete de 45.0)
total = valor_unitario * 8) + 45.0


# Calculo do saldo restante
saldo = valor_disponivel - total

# Impressao arrendondadda com 1 casa decimal
print(round(total, 1))
print(round(saldo, 1 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:56:16)
-- CODE: 
valor_unitario = float(input())
# Leitura do valor disponivel para compra 
valor_disponivel = float(input())
# Cálculo do valor total (8 jogos + frete de 45.0)
total = valor_unitario * 8) + 45.0


# Calculo do saldo restante
saldo = valor_disponivel - total

# Impressao arrendondadda com 1 casa decimal
print(round(total, 1))
print(round(saldo, 1 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:56:18)
-- CODE: 
valor_unitario = float(input())
# Leitura do valor disponivel para compra 
valor_disponivel = float(input())
# Cálculo do valor total (8 jogos + frete de 45.0)
total = valor_unitario * 8) + 45.0


# Calculo do saldo restante
saldo = valor_disponivel - total

# Impressao arrendondadda com 1 casa decimal
print(round(total, 1))
print(round(saldo, 1 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    total = valor_unitario * 8) + 45.0
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:58:34)
-- CODE: 
valor_unitario = float(input())
# Leitura do valor disponivel para compra 
valor_disponivel = float(input())
# Cálculo do valor total (8 jogos + frete de 45.0)
total = (valor_unitario * 8) + 45.0


# Calculo do saldo restante
saldo = valor_disponivel - total

# Impressao arrendondadda com 1 casa decimal
print(round(total, 1))
print(round(saldo, 1 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
